redis遇到的问题

--- a/redis/问题.md
+++ b/redis/问题.md
@@ -2,3 +2,21 @@
 要实现定时任务就需要时间到了, 通知程序处理任务. redis的发布订阅可以实现server通知cli(SUBSCRIBE:发布, PSUBSCRIBE:订阅, PUBLISH:推送消息)
 redis自带一些频道可以订阅, 叫做键空间通知. 他的作用是把redis数据的一些变动推送给客户端
 具体实现方式是: cli订阅 __keyevent@0__:expired 频道, 需要处理定时任务就set一个key(key中可以附带一些业务数据),设置过期时间. 这个key生效时会在刚才的频道发布消息, 订阅的cli可以收到消息去处理对应任务 
+
+## redis使用的时候遇到过哪些问题, 怎么解决的. 如果没遇到过问题, 有没有脑补过什么问题, 如果没脑补过, 那你回去等下消息
+### 缓存雪崩
+- 原因: 缓存突然失效或者redis服务挂了不可用, 大量的请求查询数据库导致数据崩了 
+- 解决方法
+1. key的过期时间随机, 防止出现大量的key在同一时间失效的情况 
+2. 热点数据设置长时间或永久不过期, 或者把一个热点key转成多个key, 如果其中的一个失效或因为节点挂了不能访问, 就从别的key获取 
+3. 业务上一些访问量高的场景, 对于缓存失效要有兜底策略, 避免影响到数据库 比如:服务降级(高负载的情况下直接返回)
+4. 多级缓存 //todo, 
+5. 互斥锁, 缓存不存在, 争抢到锁之后才可以去查询数据库, 更新缓存(会造成处理能力下降)
+6. redis高可用 (单独整理)
+### 缓存击穿
+- 原因: 热点key失效, 和雪崩有点类似
+- 解决方法: 基本和雪崩的解决方法类似, 不多bb
+### 缓存穿透
+- 原因不断请求不存在的key, 造成大量请求数据库
+- 解决方法:
+九点了, 饮茶先
