缓存穿透,缓存不一致

--- a/redis/问题.md
+++ b/redis/问题.md
@@ -19,4 +19,11 @@ redis自带一些频道可以订阅, 叫做键空间通知. 他的作用是把re
 ### 缓存穿透
 - 原因不断请求不存在的key, 造成大量请求数据库
 - 解决方法:
-九点了, 饮茶先
+1. 一个请求过来, 如果缓存和数据库都没有, 就在缓存把这个key set为null, 时间可以设置短一些
+2. 设置空的缓存只能防住key不变的情况, 如果攻击者随机了id, 就需要前置一个过滤器, 比如布隆过滤器(redis自带位图, 布隆过滤器需要单独安装,这个单独整理). 初始化的时候, 把db的id写入到布隆过滤器, 后续数据的新增也写到过滤器, 请求过来先查看是id是否存在, 不存在直接返回
+### 缓存和数据库不一致
+- 缓存和数据库的不一致没有百分百解决的方法, 只能尽量减少. 延迟不敏感的业务, 不一致可以接受, 关键业务还是直接查db稳妥
+- 缓存更新有一下几种策略:
+1. case1: 查询 -> 命中cache返回, 没命中查db -> 把db数据同步到cache  或者  case2: 写入 -> 写入完成把新的数据同步到cache. 这么做会有一些概率造成数据不一致. 比如两个线程, 线程a查cache没命中 -> 查db  -> 正要更新cache的时候, 线程b更新了db, 并且完成了cache的更新, 线程a继续更新缓存, 就把cache又换成了低版本
+2. 查询 -> 命中cache返回, 没命中查db -> 把db查到的数据更新到cache 这么做的优点是
+....下午上班了, 划水先
