数据不一致

--- a/redis/问题.md
+++ b/redis/问题.md
@@ -12,7 +12,7 @@ redis自带一些频道可以订阅, 叫做键空间通知. 他的作用是把re
 3. 业务上一些访问量高的场景, 对于缓存失效要有兜底策略, 避免影响到数据库 比如:服务降级(高负载的情况下直接返回)
 4. 多级缓存 //todo, 
 5. 互斥锁, 缓存不存在, 争抢到锁之后才可以去查询数据库, 更新缓存(会造成处理能力下降)
-6. redis高可用 (单独整理)
+6. redis高可用 (//todo 单独整理)
 ### 缓存击穿
 - 原因: 热点key失效, 和雪崩有点类似
 - 解决方法: 基本和雪崩的解决方法类似, 不多bb
@@ -20,10 +20,18 @@ redis自带一些频道可以订阅, 叫做键空间通知. 他的作用是把re
 - 原因不断请求不存在的key, 造成大量请求数据库
 - 解决方法:
 1. 一个请求过来, 如果缓存和数据库都没有, 就在缓存把这个key set为null, 时间可以设置短一些
-2. 设置空的缓存只能防住key不变的情况, 如果攻击者随机了id, 就需要前置一个过滤器, 比如布隆过滤器(redis自带位图, 布隆过滤器需要单独安装,这个单独整理). 初始化的时候, 把db的id写入到布隆过滤器, 后续数据的新增也写到过滤器, 请求过来先查看是id是否存在, 不存在直接返回
+2. 设置空的缓存只能防住key不变的情况, 如果攻击者随机了id, 就需要前置一个过滤器, 比如布隆过滤器(redis自带位图, 布隆过滤器需要单独安装,//todo 单独整理). 初始化的时候, 把db的id写入到布隆过滤器, 后续数据的新增也写到过滤器, 请求过来先查看是id是否存在, 不存在直接返回
 ### 缓存和数据库不一致
 - 缓存和数据库的不一致没有百分百解决的方法, 只能尽量减少. 延迟不敏感的业务, 不一致可以接受, 关键业务还是直接查db稳妥
-- 缓存更新有一下几种策略:
-1. case1: 查询 -> 命中cache返回, 没命中查db -> 把db数据同步到cache  或者  case2: 写入 -> 写入完成把新的数据同步到cache. 这么做会有一些概率造成数据不一致. 比如两个线程, 线程a查cache没命中 -> 查db  -> 正要更新cache的时候, 线程b更新了db, 并且完成了cache的更新, 线程a继续更新缓存, 就把cache又换成了低版本
-2. 查询 -> 命中cache返回, 没命中查db -> 把db查到的数据更新到cache 这么做的优点是
-....下午上班了, 划水先
+- 缓存更新有一下几种策略(查询未命中cache就查db再刷新cache这一点都是一样的, 主要区别是更新时的操作):
+1. 修改db -> 删除缓存
+可能出现不一致的情况: ![img1](./img/cache1.png)
+2. 修改db -> 更新缓存
+可能出现不一致的情况: 1.同策略1  2.两个更新的线程, 时间轴和上图中一样, 也会出现不一致
+解决方法: 写完db, 回写cache的时候, 使用setnx, 如果cache已经被更新了, 就不去覆盖.
+3. 删除缓存 -> 修改db
+出现不一致的情况: 删除完cache,还没更新db, 别的查询线程过来查询了db, 把cache补上了
+- 这几个策略没办法完全解决数据不一致, 但是第一个策略相对简单, 数据不一致的概率也低
+- 如果想完全保证一致性, 需要引入两阶段提交之类的协议, 给系统引入了复杂度, 并不是很现实, 需要考虑是否值得投入感情
+- 可以监听db的binlog -> 获取数据发生变更的id -> push到消息队列 -> 异步删除对应cache 这样来实现最终的数据一致
+- 延迟双删, 这个是为了解决1,2策略的问题, 写完数据延迟一段时间删除数据, 如果期间读请求更新了脏数据到缓存就会被删掉, 不过fpm这么整不是很ok啊, 同步代码一把梭
