头发脱落的问题

--- a/redis/问题.md
+++ b/redis/问题.md
@@ -35,3 +35,4 @@ redis自带一些频道可以订阅, 叫做键空间通知. 他的作用是把re
 - 如果想完全保证一致性, 需要引入两阶段提交之类的协议, 给系统引入了复杂度, 并不是很现实, 需要考虑是否值得投入感情
 - 可以监听db的binlog -> 获取数据发生变更的id -> push到消息队列 -> 异步删除对应cache 这样来实现最终的数据一致
 - 延迟双删, 这个是为了解决1,2策略的问题, 写完数据延迟一段时间删除数据, 如果期间读请求更新了脏数据到缓存就会被删掉, 不过fpm这么整不是很ok啊, 同步代码一把梭
+- 上面这些策略都是基于:数据库高可用, 不是三天两头挂一下, redis高可用, 不是三天两头连不上. 如果要考虑redis, mysql宕机的情况, 那可能性就多了,随着可能性的增加, 头发也会一点点脱落
