--- a/redis/问题.md
+++ b/redis/问题.md
@@ -36,3 +36,7 @@ redis自带一些频道可以订阅, 叫做键空间通知. 他的作用是把re
 - 可以监听db的binlog -> 获取数据发生变更的id -> push到消息队列 -> 异步删除对应cache 这样来实现最终的数据一致
 - 延迟双删, 这个是为了解决1,2策略的问题, 写完数据延迟一段时间删除数据, 如果期间读请求更新了脏数据到缓存就会被删掉, 不过fpm这么整不是很ok啊, 同步代码一把梭
 - 上面这些策略都是基于:数据库高可用, 不是三天两头挂一下, redis高可用, 不是三天两头连不上. 如果要考虑redis, mysql宕机的情况, 那可能性就多了,随着可能性的增加, 头发也会一点点脱落
+
+## 一名中年男子走进会议室, 一边为让你等了俩小时这件事道歉一边让你自我介绍顺便看着简历发现了精通redis的关键词但是因为最近老板的剥削没空背八股想不到刁难的方法这件事发愁, 挠着头他终于问了一句: 你们公司是怎么处理redis的大key的
+- 我们网站宕机一天都没人管, 我还在redis里保存了一个实况足球.zip, 没事就下载下来玩一玩
+- 下班了, 回去看1900的平津战役!
