--- a/redis/问题.md
+++ b/redis/问题.md
@@ -39,4 +39,8 @@ redis自带一些频道可以订阅, 叫做键空间通知. 他的作用是把re
 
 ## 一名中年男子走进会议室, 一边为让你等了俩小时这件事道歉一边让你自我介绍顺便看着简历发现了精通redis的关键词但是因为最近老板的剥削没空背八股想不到刁难的方法这件事发愁, 挠着头他终于问了一句: 你们公司是怎么处理redis的大key的
 - 我们网站宕机一天都没人管, 我还在redis里保存了一个实况足球.zip, 没事就下载下来玩一玩
-- 下班了, 回去看1900的平津战役!
+- 大key查询占用时间长, 因为redis单线程特性, 会导致别的请求阻塞住.
+- 制定开发规范, 设置之前预估key的大小
+- 分析rdb文件或者自己写脚本扫描, 找到大key
+- 找到大key想把他删除调, 渐进式地删除, 比如list就一个一个pop, zset就rangexxx拿出一部分删除, hset就hscan一部分删除, 或者redis的异步删除
+- 分治, 把大的key按照一定逻辑拆分成多个小key
